--- a/assets/custom.css
+++ b/assets/custom.css
@@ -567,3 +567,51 @@
   font-weight: 400;
   width: 100%;
 }
+
+
+.new-container{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.new-container .text{
+  width: calc(50% - 20px);
+}
+
+.new-container .text h2{
+  font-size: 35px;
+  font-family: ;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: normal;
+  text-transform: capitalize;
+}
+
+.new-container .text p{
+  font-size: 16px;
+  letter-spacing: normal;
+  font-style: normal;
+  font-weight: 400;
+  color: #1e2a21;
+}
+
+.new-container .text a{
+  font-size: 16px;
+  letter-spacing: normal;
+  font-style: normal;
+  font-weight: 400;
+  color: #fff;
+  background-color: orangered;
+  cursor: pointer;
+}
+
+.new-container .image{
+  width: calc(50% - 20px);
+}
+
+.new-container .image img{
+  width: 100%;
+  display: block;
+}
