--- a/sections/NewSection.liquid
+++ b/sections/NewSection.liquid
@@ -6,7 +6,7 @@
             <a class="btn-book" href="#">{{section.settings.btn-txt}}</a>
         </div>
         <div class="image">
-            <img src="" alt="" />
+            <img src="{{section.settings.image | img_url:'master'}}" alt="" />
         </div>
     </div>
 </section>
