--- a/sections/NewSection.liquid
+++ b/sections/NewSection.liquid
@@ -1,9 +1,9 @@
 <section>
     <div class="new-container">
-        <h2 class="text">
+        <div class="text">
             <h2>{{section.settings.heading}}</h2>
             <p>{{section.settings.para}}</p>
-            <a class="btn-book" href="#">{{section.settings.btn-txt}}</a>
+            <a class="btn-book" href="#">{{section.settings.btn-book}}</a>
         </div>
         <div class="image">
             <img src="{{section.settings.image | img_url:'master'}}" alt="" />
