--- a/sections/NewSection.liquid
+++ b/sections/NewSection.liquid
@@ -1,4 +1,4 @@
-<section id="new-section">
+<section id="new-section" class="testing">
     <div class="new-container">
         <div class="text">
             <h2>{{section.settings.heading}}</h2>
