--- a/sections/NewSection.liquid
+++ b/sections/NewSection.liquid
@@ -1,53 +1,1 @@
-<section id="new-section" class="testing">
-    <div class="new-container">
-        <div class="text">
-            <h2>{{section.settings.heading}}</h2>
-            <p>{{section.settings.para}}</p>
-            <a class="btn-book" href="#">{{section.settings.btn-book}}</a>
-        </div>
-        <div class="image">
-            <img src="{{section.settings.image | img_url:'master'}}" alt="" />
-        </div>
-    </div>
-</section>
-{% schema %}
-  {
-    "name": "New Section",
-    "tag": "section",
-    "class": "section",
-    "settings": [
-      {
-        "type": "text",
-        "id": "heading",
-        "label": "Main Heading"
-      },
-      {
-        "type": "richtext",
-        "id": "para",
-        "label": "Description"
-      },
-      {
-        "type": "text",
-        "id": "btn-book",
-        "label": "Button Text"
-      },
-      {
-      "type": "url",
-      "id": "url",
-      "label": "Button Link"
-    },
-    {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Main Image"
-    }
-    ],
-    "presets": [
-      {
-        "name": "New Section",
-        "settings": {
-        }
-      }
-    ]
-  }
-{% endschema %}
+hek
