--- a/sections/graphSection1.liquid
+++ b/sections/graphSection1.liquid
@@ -1,59 +1,41 @@
-<<<<<<< HEAD
-<section id="graph-section"> 
+<section id="graph-section">
     <div class="graph-container">
         {% for block in blocks.settings%}
         <div class="graph-items">
             <h2>{{block.settings.heading}}</h2>
             <p>{{block.settings.desc}}</p>
-=======
-<section id="new-section">
-    <div class="new-container">
-        <div class="text">
-            <h2>{{section.settings.heading}}</h2>
-            <p>{{section.settings.para}}</p>
-            <a class="btn-book" href="#">{{section.settings.btn-book}}</a>
         </div>
-        <div class="image">
-            <img src="{{section.settings.image | img_url:'master'}}" alt="" />
->>>>>>> 599df1fbcd7d38e6e0f5859ce4185996e5c4d480
-        </div>
+        
+        {%endfor%}
     </div>
 </section>
 {% schema %}
   {
-    "name": "New Section",
+    "name": "Graph Section",
     "tag": "section",
-    "class": "section",
+    "class": "",
     "settings": [
-      {
-        "type": "text",
-        "id": "heading",
-        "label": "Main Heading"
-      },
-      {
-        "type": "richtext",
-        "id": "para",
-        "label": "Description"
-      },
-      {
-        "type": "text",
-        "id": "btn-book",
-        "label": "Button Text"
-      },
-      {
-      "type": "url",
-      "id": "url",
-      "label": "Button Link"
-    },
-    {
-        "type": "image_picker",
-        "id": "image",
-        "label": "Main Image"
+    ],
+    "blocks": [
+        {
+        "name": "block",
+        "settings": [
+            {
+                "type": "text",
+                "id": "heading",
+                "label": "Heading"
+            },
+            {
+                "type": "richtext",
+                "id": "desc",
+                "label": "Description"
+            }
+        ],
     }
     ],
     "presets": [
       {
-        "name": "New Section",
+        "name": "Graph Section",
         "settings": {
         }
       }
