--- a/assets/custom.css
+++ b/assets/custom.css
@@ -641,12 +641,21 @@
   flex-wrap: wrap;
 }
 
+.graph-items {
+  width: 23.3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .graph-items h2{
   font-size: 35px;
   letter-spacing: normal;
   font-style: normal;
   font-weight: 700;
   color: #fff;
+  text-align: center;
 }
 
 .graph-items p{
@@ -655,4 +664,5 @@
   font-style: normal;
   font-weight: 400;
   color: #fff;
+  text-align: center;
 }
