--- a/assets/custom.css
+++ b/assets/custom.css
@@ -665,3 +665,50 @@
   color: #fff;
   text-align: center;
 }
+
+#reportdashboard{
+  width: 100%;
+}
+
+.reportdashboard {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.reportdashboard h2{
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: normal;
+  text-align: center;
+  color: #000;
+}
+
+.reportdashboard-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.reportdashboard-item {
+  width: 33.33%;
+}
+
+.reportdashboard-item img{
+  width: 100%;
+  display: block;
+}
+
+.reportdashboard-item h3{
+  font-size: 45px;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: normal;
+}
+
+.reportdashboard-item p{
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+}
