--- a/sections/reportDashboard.liquid
+++ b/sections/reportDashboard.liquid
@@ -8,7 +8,7 @@
             <h3>{{block.settings.title}}</h3>
             <p>{{block.settings.desc}}</p>
         </div>
-        {% forend %}
+    {% endfor %}
     </div>
     </div>
     </section>
