--- a/sections/graphSection1.liquid
+++ b/sections/graphSection1.liquid
@@ -1,6 +1,6 @@
 <section id="graph-section">
     <div class="graph-container">
-        {% for block in blocks.settings%}
+        {% for block in section.blocks %}
         <div class="graph-items">
             <h2>{{block.settings.heading}}</h2>
             <p>{{block.settings.desc}}</p>
