--- a/assets/custom.css
+++ b/assets/custom.css
@@ -719,3 +719,56 @@
   margin: 0;
   padding: 0;
 }
+
+#meettax{
+  width: 100%;
+}
+
+.meettax{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.meettax .meettax-img{
+  width: 50%;
+}
+
+
+.meettax .meettax-img img{
+  width: 100%;
+  display: block;
+}
+
+.meettax .meettax-text{
+  width: 50%;
+}
+
+.meettax .meettax-text h2{
+  font-size: 30px;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.meettax .meettax-text h3{
+  font-size: 20px;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.meettax .meettax-text p{
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+  padding: 0;
+  margin: 0;
+}
