--- a/assets/custom.css
+++ b/assets/custom.css
@@ -722,6 +722,7 @@
 
 #meettax{
   width: 100%;
+  margin-top: 80px;
 }
 
 .meettax{
@@ -744,10 +745,11 @@
 
 .meettax .meettax-text{
   width: 50%;
+  padding: 70px;
 }
 
 .meettax .meettax-text h2{
-  font-size: 30px;
+  font-size: 37px;
   font-weight: 700;
   font-style: normal;
   letter-spacing: normal;
@@ -756,7 +758,7 @@
 }
 
 .meettax .meettax-text h3{
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   font-style: normal;
   letter-spacing: normal;
@@ -765,7 +767,7 @@
 }
 
 .meettax .meettax-text p{
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
   letter-spacing: normal;
