--- a/assets/custom.css
+++ b/assets/custom.css
@@ -829,3 +829,33 @@
   border-radius: 5px;
   margin-top: 50px;
 }
+
+#reviewsection{
+  width: 100%;
+  background-color: #14059b;
+}
+
+.reviewsection{
+  width: 80%;
+  margin: 0 auto;
+}
+
+.reviewsection p{
+  font-size: 14px;
+  color: #1e2a21;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.reviewsection h2{
+  font-size: 35px;
+  color: #fff;
+  font-weight: 700;
+  font-style: normal;
+}
+
+#reviewsection .reviews{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
