--- a/sections/reviewSection.liquid
+++ b/sections/reviewSection.liquid
@@ -15,7 +15,7 @@
           </div>
 
           <div class="reviewer-info">
-            <p class="name">{{{{block.settings.reviewername}}}}</p>
+            <p class="name">{{block.settings.reviewername}}</p>
             <p class="designation">{{ block.settings.designation }}</p>
           </div>
         </div>
