--- a/sections/reviewSection.liquid
+++ b/sections/reviewSection.liquid
@@ -3,6 +3,7 @@
     <p>{{ section.settings.para }}</p>
     <h2>{{ section.settings.title }}</h2>
     <div class="reviews">
+        {%for block in section.blocks%}
       <div class="review-list">
         <div class="ratings">
           <img src="{{block.settings.ratings}}" alt="" />
@@ -13,13 +14,13 @@
           <div class="reviewer-img">
             <img src="{{ block.settings.reviewerimg | img_url : 'master' }}" />
           </div>
-
           <div class="reviewer-info">
             <p class="name">{{block.settings.reviewername}}</p>
             <p class="designation">{{ block.settings.designation }}</p>
           </div>
         </div>
       </div>
+      {%endfor%}
     </div>
   </div>
 </section>
