--- a/sections/reviewSection.liquid
+++ b/sections/reviewSection.liquid
@@ -6,7 +6,7 @@
         {%for block in section.blocks%}
       <div class="review-list">
         <div class="ratings">
-          <img src="{{block.settings.ratings}}" alt="" />
+          <img src="{{block.settings.ratings | img_url: 'master'}}" alt="" />
         </div>
         <p>{{ block.settings.review }}</p>
 
