--- a/sections/reviewSection.liquid
+++ b/sections/reviewSection.liquid
@@ -63,7 +63,7 @@
                     },
                     {
                         "type": "text",
-                        "id": "reviewname",
+                        "id": "reviewername",
                         "label": "Reviewer Name"
                     },
                     {
