--- a/sections/reviewSection.liquid
+++ b/sections/reviewSection.liquid
@@ -22,7 +22,7 @@
       </div>
       {%endfor%}
 
-      <a class="review-links" href="#">{{block.settings.links}}</a>
+      <a class="review-links" href="#">{{section.settings.links}}</a>
     </div>
   </div>
 </section>
@@ -41,7 +41,18 @@
         "type": "text",
         "id": "title",
         "label": "Main Title"    
-    }
+    },
+    {
+      "type": "text",
+      "id": "links",
+      "label": "Review Links"
+  },
+  {
+    "type": "url",
+    "id": "url",
+    "label": "Links"
+    
+  }
     ],
     "blocks": [
         {
@@ -72,18 +83,7 @@
                         "type": "text",
                         "id": "designation",
                         "label": "Review Designation"
-                    },
-                    {
-                      "type": "text",
-                      "id": "links",
-                      "label": "Review Links"
-                  },
-                  {
-                    "type": "url",
-                    "id": "url",
-                    "label": "Links"
-                    
-                  }
+                    }
             ]
         }
     ],
