--- a/assets/custom.css
+++ b/assets/custom.css
@@ -976,7 +976,7 @@
   display: block;
 }
 
-#readblog .blog .blog-list p{
+#readblog .blog .blog-list .date{
  font-size: 16px;
  letter-spacing: normal;
  font-family: ;
