--- a/assets/custom.css
+++ b/assets/custom.css
@@ -983,6 +983,10 @@
  font-weight: 500;
  font-style: normal;
  line-height: normal;
+ text-align: left;
+ width: unset;
+ padding: 0;
+ margin: 0;
 }
 
 
