--- a/assets/custom.css
+++ b/assets/custom.css
@@ -597,7 +597,7 @@
 }
 
 .new-container .text p {
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: normal;
   font-style: normal;
   font-weight: 400;
@@ -609,7 +609,7 @@
   font-size: 16px;
   letter-spacing: normal;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   color: #fff;
   background-color: orangered;
   cursor: pointer;
@@ -1043,3 +1043,121 @@
   text-decoration: none;
   display: block;
  }
+
+ @media screen and (max-width: 1920px){
+  .new-container .text h2{
+    font-size: 90px;
+    line-height: normal;
+    width: 714px;
+  }
+
+  .new-container .text p {
+    font-size: 25px;
+    line-height: normal;
+    width: 460px;
+}
+
+.new-container .text a {
+  font-size: 22px;
+  padding: 15px 25px;
+  display: block;
+  width: 200px;
+  text-align: center;
+}
+}
+
+@media screen and (max-width: 1440px){
+  .new-container .text h2{
+    font-size: 75px;
+    line-height: normal;
+    width: 714px;
+  }
+}
+
+@media screen and (max-width: 1024px){
+  .new-container .text h2{
+    font-size: 55px;
+    line-height: normal;
+    width: 530px;
+  }
+}
+
+@media screen and (max-width: 820px){
+  .new-container {
+    width: 100%;
+    padding: 60px;
+}
+
+  .new-container .text h2{
+    font-size: 40px;
+    line-height: normal;
+    width: 380px;
+  }
+
+  .new-container .text p {
+    font-size: 16px;
+    width: 360px;
+}
+}
+
+@media screen and (max-width: 670px){
+  .new-container {
+    width: 100%;
+    padding: 50px;
+}
+.new-container .text h2{
+  font-size: 32px;
+  line-height: normal;
+  width: 305px;
+}
+
+.new-container .text p {
+  font-size: 14px;
+  width: 300px;
+}
+}
+
+@media screen and (max-width: 540px){
+
+  .new-container {
+    width: 100%;
+    flex-direction: column-reverse;
+    padding: 30px;
+    gap: 32px;
+}
+
+.new-container .image {
+  width: 100%;
+}
+
+
+  .new-container .text {
+    width: 100%;
+}
+
+  .new-container .text h2 {
+    font-size: 32px;
+    text-align: center;
+}
+
+  .new-container .text p {
+    font-size: 16px;
+    letter-spacing: normal;
+    font-style: normal;
+    font-weight: 400;
+    color: #1e2a21;
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: center;
+}
+
+  .new-container .text a {
+    font-size: 16px;
+    margin: 0 auto;
+    display: block;
+    width: 145px;
+    text-align: center;
+    margin-top: 20px;
+}
+}
