--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1138,6 +1138,8 @@
   .new-container .text h2 {
     font-size: 32px;
     text-align: center;
+    width: unset;
+    margin: auto;
 }
 
   .new-container .text p {
@@ -1156,7 +1158,7 @@
     font-size: 16px;
     margin: 0 auto;
     display: block;
-    width: 145px;
+    width: 160px;
     text-align: center;
     margin-top: 20px;
 }
