--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1064,6 +1064,31 @@
   width: 200px;
   text-align: center;
 }
+
+.graph-container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 60px 0;
+}
+
+.graph-items h2 {
+  font-size: 65px;
+  letter-spacing: normal;
+  font-style: normal;
+  line-height: normal;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.graph-items p {
+  font-size: 25px;
+  padding: 0;
+  margin: 0;
+}
+
 }
 
 @media screen and (max-width: 1440px){
