--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1160,6 +1160,16 @@
   .graph-items p {
     font-size: 20px;
 }
+
+.reportdashboard h2 {
+  font-size: 55px!important;
+  line-height: normal;
+}
+
+.reportdashboard-item h3 {
+  font-size: 19px;
+  margin-top: 20px;
+}
 }
 
 @media screen and (max-width: 820px){
