--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1133,6 +1133,25 @@
   line-height: normal;
 }
 
+.meettax .meettax-text h2 {
+  font-size: 51px;
+  line-height: normal;
+}
+
+.meettax .meettax-text {
+  padding-right: unset;
+}
+
+.meettax .meettax-text h3 {
+  font-size: 22px;
+  line-height: normal;
+}
+
+.meettax .meettax-text p {
+  font-size: 20px;
+  line-height: normal;
+}
+
 }
 
 @media screen and (max-width: 1440px){
