--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1133,13 +1133,13 @@
   line-height: normal;
 }
 
+.meettax .meettax-text {
+  padding-right: unset;
+}
+
 .meettax .meettax-text h2 {
   font-size: 51px;
   line-height: normal;
-}
-
-.meettax .meettax-text {
-  padding-right: unset;
 }
 
 .meettax .meettax-text h3 {
@@ -1169,6 +1169,24 @@
   font-size: 84px;
   line-height: normal;
 }
+
+.meettax .meettax-text h2 {
+  font-size: 46px;
+  line-height: normal;
+}
+
+.meettax .meettax-text h3 {
+  font-size: 20px;
+  line-height: normal;
+}
+
+.meettax .meettax-text p {
+  font-size: 19px;
+  line-height: normal;
+}
+
+
+
 }
 
 @media screen and (max-width: 1280px){
