--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1184,10 +1184,26 @@
   font-size: 19px;
   line-height: normal;
 }
-
-
-
 }
+
+@media screen and (max-width: 1366px){
+
+  .meettax .meettax-text h2 {
+    font-size: 45px;
+    line-height: normal;
+  }
+  
+  .meettax .meettax-text h3 {
+    font-size: 19px;
+    line-height: normal;
+  }
+  
+  .meettax .meettax-text p {
+    font-size: 18px;
+    line-height: normal;
+  }
+}
+
 
 @media screen and (max-width: 1280px){
   .graph-items {
