--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1214,6 +1214,24 @@
   font-size: 70px!important;
   line-height: normal;
 }
+
+.meettax .meettax-text h2 {
+  font-size: 42px;
+  line-height: normal;
+}
+
+.meettax .meettax-text h3 {
+  font-size: 18px;
+  line-height: normal;
+}
+
+.meettax .meettax-text p {
+  font-size: 16px;
+  line-height: normal;
+}
+
+
+
 }
 
 @media screen and (max-width: 1024px){
