--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1321,6 +1321,11 @@
   line-height: normal;
 }
 
+.meettax {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .meettax .meettax-text {
   width: 50%;
   padding: 40px;
@@ -1328,42 +1333,22 @@
 }
 
 .meettax .meettax-text h2 {
-  font-size: 27px;
+  font-size: 30px;
   line-height: normal;
 }
 
 .meettax .meettax-text h3 {
-  font-size: 12px;
+  font-size: 13px;
   line-height: normal;
 }
 
 .meettax .meettax-text p {
-  font-size: 11px;
+  font-size: 12px;
   line-height: normal;
 }
 }
 
-@media screen and (max-width: 768px){
-  #meettax {
-    width: 100%;
-    margin-top: 50px;
-}
 
-  .meettax .meettax-text h2 {
-    font-size: 25px;
-    line-height: normal;
-  }
-  
-  .meettax .meettax-text h3 {
-    font-size: 11px;
-    line-height: normal;
-  }
-  
-  .meettax .meettax-text p {
-    font-size: 10px;
-    line-height: normal;
-  }
-}
 
 @media screen and (max-width: 670px){
   .new-container {
