--- a/assets/custom.css
+++ b/assets/custom.css
@@ -809,6 +809,8 @@
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+  padding: 0;
+  margin: 0;
 }
 
 .reducersik-text p{
@@ -829,6 +831,9 @@
   text-decoration: none;
   border-radius: 5px;
   margin-top: 50px;
+  display: block;
+  width: 200px;
+  text-align: center;
 }
 
 #reviewsection{
