--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1121,6 +1121,23 @@
   font-size: 23px;
   line-height: normal;
 }
+
+.reducersik-text h2 {
+  font-size: 59px;
+  line-height: normal;
+}
+
+.reducersik-text p {
+  font-size: 22px;
+  line-height: normal;
+}
+
+.reducersik-text a {
+  font-size: 25px;
+  width: 220px;
+  margin-top: 50px;
+}
+
 }
 
 @media screen and (max-width:1560px){
