--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1215,6 +1215,24 @@
   font-size: 19px;
   line-height: normal;
 }
+
+.reducersik-text h2 {
+  font-size: 47px;
+  line-height: normal;
+}
+
+.reducersik-text p {
+  font-size: 16px;
+  line-height: normal;
+}
+
+.reducersik-text a {
+  font-size: 25px;
+  width: 220px;
+  margin-top: 40px;
+}
+
+
 }
 
 @media screen and (max-width: 1366px){
