--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1297,6 +1297,21 @@
 }
 
 
+.reducersik-text h2 {
+  font-size: 40px;
+  line-height: normal;
+}
+
+.reducersik-text p {
+  font-size: 14px;
+  line-height: normal;
+}
+
+.reducersik-text a {
+  font-size: 22px;
+  width: 180px;
+  margin-top: 30px;
+}
 
 }
 
