--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1306,7 +1306,7 @@
   font-size: 14px;
   line-height: normal;
 }
-
+ 
 .reducersik-text a {
   font-size: 22px;
   width: 180px;
@@ -1368,6 +1368,22 @@
   line-height: normal;
 }
 
+.reducersik-text h2 {
+  font-size: 32px;
+  line-height: normal;
+}
+
+.reducersik-text p {
+  font-size: 11px;
+  line-height: normal;
+}
+
+
+.reducersik-text a {
+  font-size: 20px;
+  width: 150px;
+  margin-top: 30px;
+}
 
 }
 
