--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1237,6 +1237,16 @@
   line-height: normal;
 }
 
+.reviewsection h2 {
+  font-size: 70px;
+  line-height: normal;
+ }
+
+ #reviewsection .review-list p {
+  font-size: 20px;
+  line-height: normal;
+}
+
 }
 
 @media screen and (max-width: 1440px){
