--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1340,6 +1340,13 @@
     width: 200px;
     margin-top: 40px;
 }
+
+#reviewsection .reviewer .reviewer-info .designation {
+  font-size: 19px;
+  line-height: normal;
+}
+
+
 }
 
 
@@ -1383,6 +1390,16 @@
   font-size: 22px;
   width: 180px;
   margin-top: 30px;
+}
+
+.reviewsection h2 {
+  font-size: 60px;
+  line-height: normal;
+}
+
+#reviewsection .reviewer .reviewer-info .designation {
+  font-size: 18px;
+  line-height: normal;
 }
 
 }
