--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1481,6 +1481,26 @@
   margin-top: 30px;
 }
 
+.reviewsection h2 {
+  font-size: 50px;
+  line-height: normal;
+}
+
+#reviewsection .review-list p {
+  font-size: 17px;
+  line-height: normal;
+}
+
+#reviewsection .reviewer .reviewer-info .name {
+  font-size: 19px;
+  line-height: normal;
+}
+
+#reviewsection .reviewer .reviewer-info .designation {
+  font-size: 13px;
+  line-height: normal;
+}
+
 }
 
 @media screen and (max-width: 820px){
