--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1622,6 +1622,13 @@
   line-height: normal;
 }
 
+#reviewsection .review-links {
+  font-size: 20px;
+  line-height: normal;
+  width: 200px;
+  margin: 50px auto 0;
+}
+
 }
 
 
