--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1750,6 +1750,26 @@
   margin-top: 15px;
 }
 
+.reviewsection h2 {
+  font-size: 40px;
+  line-height: normal;
+}
+
+#reviewsection .review-list p {
+  font-size: 11px;
+  line-height: normal;
+}
+
+#reviewsection .reviewer .reviewer-info .name {
+  font-size: 12px;
+  line-height: normal;
+}
+
+#reviewsection .reviewer .reviewer-info .designation {
+  font-size: 9px;
+  line-height: normal;
+}
+
 }
 
 @media screen and (max-width: 540px){
