--- a/sections/ReadBlog.liquid
+++ b/sections/ReadBlog.liquid
@@ -1,6 +1,6 @@
 <section id="readblog">
     <div class="read-container">
-        <h2>{{section.settings.bloghead}}</h2>
+        <h2>Read our blog</h2>
         <p>{{section.settings.sectionDesc}}</p>
 
         <div class="blog">
