--- a/assets/custom.css
+++ b/assets/custom.css
@@ -960,7 +960,9 @@
   letter-spacing: normal;
   line-height: normal;
   color: #000;
-  z-index: 5;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
 #readblog .read-container p{
