--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1407,6 +1407,11 @@
   line-height: normal;
 }
 
+#readblog .blog .blog-list h3 {
+  font-size: 22px;
+  line-height: normal;
+  width: 65%;
+}
 
 }
 
@@ -1469,6 +1474,13 @@
   font-size: 18px;
   line-height: normal;
 }
+
+#readblog .blog .blog-list h3 {
+  font-size: 22px;
+  line-height: normal;
+  width: 68%;
+}
+
 
 }
 
@@ -1560,6 +1572,28 @@
 #reviewsection .reviewer .reviewer-info .designation {
   font-size: 13px;
   line-height: normal;
+}
+
+
+#readblog .read-container h2 {
+  font-size: 65px;
+  line-height: normal;
+}
+
+#readblog .read-container p {
+  font-size: 17px;
+  margin: 0 auto 50px;
+}
+
+#readblog .blog .blog-list .date {
+  font-size: 22px;
+  line-height: normal;
+}
+
+#readblog .blog .blog-list h3 {
+  font-size: 18px;
+  line-height: normal;
+  width: 70%;
 }
 
 }
