--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1897,6 +1897,24 @@
   line-height: normal;
 }
 
+#readblog .read-container h2 {
+  font-size: 50px;
+  line-height: normal;
+}
+
+#readblog .read-container p {
+  font-size: 13px;
+  margin: 0 auto 20px;
+}
+
+#readblog .blog .blog-list h3 {
+  font-size: 15px;
+  line-height: normal;
+  width: 84%;
+}
+
+
+
 }
 
 @media screen and (max-width: 540px){
