--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2108,4 +2108,17 @@
   line-height: normal;
 }
 
+#readblog .read-container p {
+  font-size: 15px;
+  margin: 0 auto 20px;
+  width: 70%;
+}
+
+#readblog .blog {
+  width: 100%;
+  flex-direction: column;
+  gap: 20px;
+}
+
+
 }
