--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1061,6 +1061,29 @@
   display: block;
  }
 
+
+ #scooterModel{
+  width: 100%;
+  background-color: #000000;
+ }
+
+ #scooterModel .model-container{
+  padding: 106px 142px 50px 0;
+ }
+
+
+ #scooterModel .model-content{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+ }
+
+
+
+
+
+
+
  @media screen and (max-width: 1920px){
   .new-container .text h2{
     font-size: 90px;
