--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1082,6 +1082,28 @@
   width: 66%;
  }
 
+
+
+ #scooterModel .model-content .model-content-one h2 {
+  font-size: 2.5rem;
+  line-height: 3.625rem;
+  font-family: D-Fly-Light;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+
+#scooterModel .model-content .model-content-one p {
+  font-size: 18px;
+  line-height: 19px;
+  font-family: Gotham-Book;
+  font-weight: 500;
+  margin-top: 10px;
+  color: rgb(158, 158, 158);
+}
+
  #scooterModel .model-content .model-content-two{
   width: 34%;
  }
