--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -15,7 +15,7 @@
       </div>
       <div class="model-content-two">
         <div class="model-btn-container">
-          <button class="btn df-model">{{ section.settings['first-btn-txt'] }}</button>
+          <button class="btn df-model active">{{ section.settings['first-btn-txt'] }}</button>
           <button class="btn df-model">{{ section.settings['second-btn-txt'] }}</button>
         </div>
         <a href="#">{{ section.settings.compare }}</a>
