--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1140,6 +1140,8 @@
   line-height: 28.3px;
   min-width: unset;
   padding: 0;
+  text-transform: uppercase;
+  outline: unset;
 }
 
 #scooterModel .model-content-two .model-btn-container button.active {
