--- a/sections/scooterModel.liquid
+++ b/sections/scooterModel.liquid
@@ -2,8 +2,10 @@
   <div class="model-container">
     <div class="model-content">
       <div class="model-content-one">
+        <div class="model-header">
         <h2>{{ section.settings.heading }}</h2>
         <p>{{ section.settings.para }}</p>
+        </div>
         <div class="model-images">
           <div class="df-model-img">
             <img src="{{section.settings.img-one | img_url:'master' }}" alt="df-model-img">
