--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1167,6 +1167,30 @@
 }
 
 
+#scooterModel .model-price .first-model-price {
+  font-size: 40px;
+  font-family: D-Fly;
+  font-weight: 400;
+  line-height: 48px;
+  letter-spacing: .05em;
+  text-align: center;
+  color: #fff;
+  background: #18181c;
+  position: absolute;
+  width: 220px;
+  height: 87px;
+  left: 50%;
+  transform: translate(-50%);
+  top: -46px;
+  border: 1px solid #31323b;
+  border-bottom: unset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px 30px 0 0;
+}
+
+
 
  @media screen and (max-width: 1920px){
   .new-container .text h2{
